# framework

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Dockerfile  Justfile  NOTICE  README-host.md  README.md  docker-compose.yml
.run/: fsfw-example-hosted.run.xml
automation/: Jenkinsfile
bsp_hosted/: CMakeLists.txt  bsp_hosted.mk  main.cpp
bsp_hosted/core/: CMakeLists.txt  CfdpHandler.cpp  CfdpHandler.h  InitMission.cpp  InitMission.h  ObjectFactory.cpp  ObjectFactory.h
bsp_hosted/fsfwconfig/: CMakeLists.txt  FSFWConfig.h.in  OBSWConfig.h.in  definitions.h  fsfwconfig.mk
bsp_hosted/fsfwconfig/events/: subsystemIdRanges.h  translateEvents.cpp  translateEvents.h
bsp_hosted/fsfwconfig/ipc/: missionMessageTypes.cpp  missionMessageTypes.h
bsp_hosted/fsfwconfig/objects/: systemObjectList.h  translateObjects.cpp  translateObjects.h
bsp_hosted/fsfwconfig/pollingsequence/: pollingSequenceFactory.cpp  pollingSequenceFactory.h
bsp_hosted/fsfwconfig/returnvalues/: classIds.h
bsp_hosted/fsfwconfig/tmtc/: apid.h  pusIds.h
bsp_hosted/utility/: CMakeLists.txt  printChar.c
cmake/: ClangToolchain.cmake  HardwareOsPostConfig.cmake  HardwareOsPreConfig.cmake  PreProjectConfig.cmake
cmake/scripts/: cmake-build-cfg.py  cmake_build_config.py
cmake/scripts/Hosted/: cmake_release_cfg.sh  create_cmake_debug_cfg.sh  create_cmake_release_cfg.sh  create_cmake_relwithdeb_cfg.sh  make-debug-cfg.sh  make-release-cfg.sh  make_debug_cfg.sh  make_releae_cfg.sh  ninja-debug-cfg.sh  ninja-release-cfg.sh  ninja_debug_cfg.sh  ninja_release_cfg.sh
cmake/scripts/Hosted/vs2019/: create_cmake_debug_cfg.sh  create_cmake_relwithdeb_cfg.sh
cmake/scripts/Linux/: create_cmake_debug_cfg.sh  create_cmake_release_cfg.sh  create_cmake_relwithdeb_cfg.sh  create_cmake_size_cfg.sh  make-debug-cfg.sh  make-release-cfg.sh  make_size_cfg.sh  ninja-debug-cfg.sh  ninja_debug_cfg.sh
cmake/scripts/host/: make-release-cfg.sh  ninja-debug-cfg.sh
cmake/scripts/host/vs2019/: create_cmake_release_cfg.sh
generators/: .gitignore  bsp_hosted_events.csv  bsp_hosted_objects.csv  bsp_hosted_returnvalues.csv  definitions.py  eive_mod.db  gen.py  mod_exporter.py
generators/.run/: events.run.xml  objects.run.xml  retval.run.xml
generators/archive/: packet_content_parser.py
generators/devicecommands/: device_command_parser.py
generators/events/: event_parser.py  translateEvents.cpp  translateEvents.h
generators/objects/: objects.py  translateObjects.cpp
generators/packetcontent/: mib_packet_content_parser.py  packet_content_parser.py
generators/returnvalues/: returnvalues_parser.py
generators/subservice/: mib_subservice_parser.py  subservice_parser.py
generators/utility/: mib_globals.py
misc/eclipse/: .cproject  fsfw-example-linux-debug.launch  fsfw-example-linux-release.launch  fsfw-example-mingw-debug.launch
scripts/: apply-clang-format.sh  auto-formatter.sh
tmtc/: .gitignore  README.md  requirements.txt  tmtc_client_cli.py  tmtc_client_gui.py  tmtc_conf.json  tmtcc.py  tmtccli.py  tmtcgui.py
tmtc/common_tmtc/config/: custom_mode_op.py  hook_implementation.py  object_ids.py  version.py
tmtc/common_tmtc/pus_tc/: command_data.py  service_17_test.py  service_200_mode.py  service_20_parameters.py  service_2_raw_cmd.py  service_3_housekeeping.py  service_8_func_cmd.py  tc_packing.py
tmtc/common_tmtc/pus_tm/: factory_hook.py  service_3_hk_handling.py  service_8_handling.py
tmtc/config/: custom_definitions.py  definitions.py  events.csv  hook.py  hook_implementation.py  objects.csv  returnvalues.csv  tmtc_config.json
tmtc/pus_tc/: service_200_mode.py  service_20_parameters.py  service_2_raw_cmd.py  service_3_housekeeping.py  service_8_func_cmd.py  tc_packing.py
tmtc/pus_tm/: factory_hook.py  service_3_hk_handling.py
